# BASICS-CDSS

./: .gitignore  .zenodo.json  BASICS-CDSS.md  CITATION.cff  Dockerfile  FIGURE_MANIFEST.csv  GITHUB_READY.md  GITHUB_UPLOAD_INSTRUCTIONS.md  PERFORMANCE_COMPLETE.md  QUICKSTART.md  README.md  RECONCILIATION_TABLE.md  REPOSITORY_COMPLETE.md  REPRODUCIBILITY.md  VISUALIZATION_COMPLETE.md  activate_venv.bat  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
.md/: GITHUB_READY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.txt  QUICKSTART_MANUSCRIPT_INTEGRATION.md  README.md  REPOSITORY_COMPLETE.md
docs/: ADVANCED_SIMULATION_GUIDE.md  PUBLICATION_STRATEGY.md  RELATED_PROJECTS.md  VISUALIZATION_GUIDE.md
docs/.md/: ADVANCED_SIMULATION_GUIDE.md  CLINICAL_METRICS_GUIDE.md  DETAILED_PUBLICATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MANUSCRIPT_UPDATES.md  METRIC_EXPLANATIONS_FOR_PAPERS.md  PAPER_TEMPLATES.md  PERFORMANCE_METRICS_GUIDE.md  QUICK_REFERENCE.md  SUPPLEMENTARY_TEMPLATES.md  XAI_GUIDE.md
examples/: generate_clinical_metrics_figures.py  generate_performance_figures.py  generate_xai_figures.py  publication_figures.py  regenerate_bspc_figures.py  visualization_demo.py
figures/results/: figure_provenance.csv
notebooks/: 00_quickstart.ipynb  01_basics_scenario_instantiation.ipynb  02_basics_beyond_accuracy_metrics.ipynb  03_coverage_risk_selective_prediction.ipynb  04_harm_aware_evaluation.ipynb  05_end_to_end_pipeline.ipynb  06_digital_twin_simulation.ipynb
results/: bews.csv  calibration.csv  cohort.csv  cohort_summary.json  conformal.csv  counterfactual_alignment.csv  counterfactual_delay.csv  coverage_risk.csv  dbrs.csv  decision_curve.csv  decision_curve_series.csv  fairness.csv  harm.csv  masking_sweep.csv  model_metrics.csv  nns.csv  nnt.csv  noise_sensitivity.csv  run_metadata.json  summary.json  tcb.csv  temporal_consistency.csv  temporal_metrics.csv
scripts/: copy_figures_to_manuscripts.py  generate_baseline_metrics.py  generate_manuscript_figures.py  generate_paper1_figures.py  generate_paper1_figures_complete.py  generate_results_figures.py  run_all.py
src/basics_cdss/: __init__.py
src/basics_cdss/causal/: __init__.py  causal_graph.py  causal_metrics.py  confounding.py  (+2 more)
tests/: test_imports.py  test_metrics_calibration.py  test_metrics_coverage_risk.py  test_metrics_harm.py  test_performance_metrics.py  test_perturbations.py  test_smoke.py  test_units.py  test_visualization.py  test_xai_counterfactual.py  test_xai_shap.py
xai_success_test/shap/: game_theoretic_explanation.txt
(+37 files in other folders)
